...
          Positioned.fill(child: widget.body),
          if (widget.showLeading)
            Positioned(
              top: 30,
              left: 15,
              child: IconButton(
                key: Key('backButton'),
                icon: Ink(
                  decoration: BoxDecoration(
                    shape: BoxShape.circle,
                    color: Colors.white,
                  ),
                  child: Icon(
...
